--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "moment-timezone": "^0.5.31"
+    "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
